--- a/index.html
+++ b/index.html
@@ -63,43 +63,393 @@
     }
 
     section {
-      padding: 40px;
-      max-width: 1000px;
-      margin: auto;
+      padding: 60px 40px;
+      max-width: 1200px;
+      margin: 0 auto;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+    }
+
+    section:last-child {
+      border-bottom: none;
+    }
+
+    section h2 {
+      font-size: 2.2em;
+      font-weight: 700;
+      margin: 0 0 40px 0;
+      color: #ffffff;
+      letter-spacing: -0.5px;
+      position: relative;
+      padding-bottom: 20px;
+    }
+
+    section h2::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 60px;
+      height: 3px;
+      background: linear-gradient(90deg, #4a9eff, #00d9ff);
+      border-radius: 2px;
+    }
+
+    section p {
+      line-height: 1.7;
+      margin-bottom: 16px;
+      color: #e0e0e0;
+    }
+
+    section ul {
+      margin: 24px 0;
+      padding-left: 24px;
+    }
+
+    section ul li {
+      margin-bottom: 12px;
+      line-height: 1.6;
+      color: #e0e0e0;
+    }
+
+    @media (max-width: 768px) {
+      section {
+        padding: 48px 24px;
+      }
+
+      section h2 {
+        font-size: 1.8em;
+        margin-bottom: 32px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      section {
+        padding: 36px 16px;
+      }
+
+      section h2 {
+        font-size: 1.5em;
+        margin-bottom: 24px;
+      }
     }
 
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 24px;
+      max-width: 100%;
+      padding: 0;
+      margin: 0;
+      margin-top: 20px;
     }
 
-    .gallery img {
+    @media (max-width: 768px) {
+      .gallery {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 16px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .gallery {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 12px;
+      }
+    }
+
+    .location-card {
+      position: relative;
+      aspect-ratio: 1 / 1;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+      transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1),
+                  box-shadow 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+      cursor: pointer;
+      background: #1a1a1a;
+      display: flex;
+      align-items: stretch;
+      justify-content: stretch;
+    }
+
+    .location-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 16px 40px rgba(0, 0, 0, 0.5);
+    }
+
+    .location-card:focus-within {
+      outline: 2px solid #4a9eff;
+      outline-offset: 2px;
+    }
+
+    .location-card img {
       width: 100%;
-      height: auto;
-      border-radius: 10px;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+      display: block;
+    }
+
+    .location-card:hover img {
+      transform: scale(1.08);
+    }
+
+    .location-title {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.95) 0%,
+        rgba(0, 0, 0, 0.7) 40%,
+        rgba(0, 0, 0, 0.3) 70%,
+        transparent 100%
+      );
+      padding: 32px 16px 16px;
+      color: white;
+      font-size: 1.1em;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      transition: all 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+      text-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+      z-index: 2;
+    }
+
+    .location-card:hover .location-title {
+      padding: 40px 16px 16px;
+    }
+
+    @media (max-width: 768px) {
+      .location-title {
+        font-size: 1em;
+        padding: 28px 14px 12px;
+      }
+
+      .location-card:hover .location-title {
+        padding: 32px 14px 12px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .location-title {
+        font-size: 0.9em;
+        font-weight: 700;
+        padding: 20px 12px 10px;
+      }
+
+      .location-card:hover .location-title {
+        padding: 24px 12px 10px;
+      }
     }
 
     #consoleLog {
-      background: #222;
-      padding: 10px;
-      margin-top: 10px;
-      max-height: 200px;
+      background: #1a1a1a;
+      padding: 16px;
+      margin-top: 20px;
+      max-height: 300px;
       overflow-y: auto;
       font-size: 0.9em;
       border-radius: 8px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      color: #b0b0b0;
+      line-height: 1.5;
     }
 
     textarea {
       width: 100%;
       height: 200px;
-      padding: 10px;
+      padding: 12px;
       font-size: 1em;
       border-radius: 8px;
-      margin-bottom: 10px;
+      margin-bottom: 16px;
+      margin-top: 16px;
+      background: #1a1a1a;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      resize: vertical;
+    }
+
+    textarea::placeholder {
+      color: #666;
+    }
+
+    section button,
+    section a[target="_blank"] {
+      display: inline-block;
+      padding: 12px 24px;
+      margin-top: 16px;
+      background: linear-gradient(135deg, #4a9eff, #00d9ff);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1em;
+      font-weight: 600;
+      cursor: pointer;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      letter-spacing: 0.5px;
+    }
+
+    section button:hover,
+    section a[target="_blank"]:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(74, 158, 255, 0.3);
+    }
+
+    section button:active {
+      transform: translateY(0);
+    }
+
+    section a[target="_blank"] {
+      color: white !important;
+      background: linear-gradient(135deg, #4a9eff, #00d9ff);
+    }
+
+    .skills-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .skill-card {
+      background: linear-gradient(135deg, #1a1a1a, #242424);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      padding: 24px;
+      transition: all 0.3s ease;
+      cursor: default;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .skill-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(74, 158, 255, 0.1), transparent);
+      transition: left 0.5s ease;
+    }
+
+    .skill-card:hover {
+      border-color: rgba(74, 158, 255, 0.4);
+      box-shadow: 0 8px 24px rgba(74, 158, 255, 0.15);
+      transform: translateY(-2px);
+    }
+
+    .skill-card:hover::before {
+      left: 100%;
+    }
+
+    .skill-name {
+      font-size: 1.2em;
+      font-weight: 700;
+      color: #ffffff;
+      margin-bottom: 12px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .skill-level {
+      font-size: 0.9em;
+      color: #b0b0b0;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-weight: 600;
+      position: relative;
+      z-index: 1;
+    }
+
+    .skill-level.intermediate {
+      color: #4a9eff;
+    }
+
+    .skill-level.beginner {
+      color: #00d9ff;
+    }
+
+    .skill-level-bar {
+      width: 100%;
+      height: 4px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 2px;
+      margin-top: 12px;
+      overflow: hidden;
+      position: relative;
+      z-index: 1;
+    }
+
+    .skill-level-bar::after {
+      content: '';
+      position: absolute;
+      height: 100%;
+      background: linear-gradient(90deg, #4a9eff, #00d9ff);
+      border-radius: 2px;
+      transition: width 0.6s ease;
+    }
+
+    .skill-card[data-level="intermediate"] .skill-level-bar::after {
+      width: 70%;
+    }
+
+    .skill-card[data-level="beginner"] .skill-level-bar::after {
+      width: 40%;
+    }
+
+    @media (max-width: 768px) {
+      .skills-container {
+        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+        gap: 16px;
+      }
+
+      .skill-card {
+        padding: 18px;
+      }
+
+      .skill-name {
+        font-size: 1.05em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .skills-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+      }
+
+      .skill-card {
+        padding: 16px;
+      }
+
+      .skill-name {
+        font-size: 0.95em;
+      }
+
+      .skill-level {
+        font-size: 0.8em;
+      }
     }
 
     .hidden { display: none; }
+      margin: 20px 0 24px 0;
+      border-radius: 12px;
+      display: block;
+      max-width: 100%;
+      height: auto;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    section img:hover {
+      transform: scale(1.02);
+      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.4);
+    }
   </style>
 </head>
 <body>
@@ -121,7 +471,7 @@
     <section id="about">
       <h2>About Me</h2>
       <img src="images/profile.jpg" alt="Profile Picture" width="200" style="border-radius: 10px;" />
-       <p>Hi there! I'm a first-year undergraduate at IIIT Hyderabad, passionate about problem-solving, strategy, and innovation. My interests lie at the intersection of technology and logic, often explored through my love for chess, game theory, and software systems. I thrive in environments that challenge my thinking and enjoy diving into complex systems to find elegant solutions.</p> 
+       <p>Hi there! I'm a second-year undergraduate at IIIT Hyderabad, passionate about problem-solving, strategy, and innovation. My interests lie at the intersection of technology and logic, often explored through my love for chess, game theory, and software systems. I thrive in environments that challenge my thinking and enjoy diving into complex systems to find elegant solutions.</p> 
       <p>Achievements:</p>
       <ul>
         <li>JEE Mains Rank: 2674</li>
@@ -133,13 +483,31 @@
 
     <section id="local">
       <h2>My Local Area</h2>
-      <div class="gallery">
-        <img src="images/local1.jpg" alt="Local1" />
-        <img src="images/local2.jpg" alt="Local2" />
-        <img src="images/local3.jpg" alt="Local3" />
-        <img src="images/local4.jpg" alt="Local4" />
-        <img src="images/local5.jpg" alt="Local5" />
-        <img src="images/local6.jpg" alt="Local6" />
+      <div class="gallery" role="region" aria-label="Local area image gallery">
+        <article class="location-card">
+          <img src="images/local1.jpg" alt="Local area location 1" />
+          <div class="location-title">Location 1</div>
+        </article>
+        <article class="location-card">
+          <img src="images/local2.jpg" alt="Local area location 2" />
+          <div class="location-title">Location 2</div>
+        </article>
+        <article class="location-card">
+          <img src="images/local3.jpg" alt="Local area location 3" />
+          <div class="location-title">Location 3</div>
+        </article>
+        <article class="location-card">
+          <img src="images/local4.jpg" alt="Local area location 4" />
+          <div class="location-title">Location 4</div>
+        </article>
+        <article class="location-card">
+          <img src="images/local5.jpg" alt="Local area location 5" />
+          <div class="location-title">Location 5</div>
+        </article>
+        <article class="location-card">
+          <img src="images/local6.jpg" alt="Local area location 6" />
+          <div class="location-title">Location 6</div>
+        </article>
       </div>
     </section>
 
